--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "readline": "^1.3.0",
-        "stripe": "^20.1.0"
+        "stripe": "^20.1.0",
+        "uuid": "^13.0.0"
     }
 }
