--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@anthropic-ai/sdk": "^0.71.2",
         "chalk": "^5.6.2",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "express": "^4.18.2",
         "ioredis": "^5.8.2",
         "readline": "^1.3.0",
