--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "deepfish": "./src/cli.js"
     },
     "scripts": {
-        "start": "node src/cli.js",
+        "start": "node src/server.js",
+        "cli": "node src/cli.js",
         "server": "node src/server.js",
         "dev": "node src/cli.js --dev",
         "build": "cd frontend && npm install && npm run build"
