--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "readline": "^1.3.0",
         "stripe": "^20.1.0",
         "twilio": "^5.11.1",
-        "uuid": "^13.0.0"
+        "uuid": "^13.0.0",
+        "ws": "^8.18.3"
     }
 }
