--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "server": "node src/server.js",
         "dev": "node src/cli.js --dev",
         "build": "cd frontend && npm install && npm run build",
+        "refresh-secrets": "node scripts/refresh_secrets.js",
         "test:e2e": "npx playwright test",
         "test:e2e:ui": "npx playwright test --ui",
         "test:e2e:report": "npx playwright show-report"
